@@ -1,3 +1,9 @@
+2009/01/06 (TS):
+ - lanIpBasic.h, lanIpBasic.c, lanIpBasicTest.c, drvUdpSock.c: Added 'flags'
+   argument to udpSockConnect() and a UDPSOCK_MCPASS flag. When this is set
+   and the peer IP address is a multicast address then -- deviating from BSD
+   semantics -- the source IP address and port of incoming packets are allowed
+   to differ from the connected peer's.
 2009/12/15 (TS):
  - drvLan9118.c, drvLan9118.h: added 'drvLan9118BcFilterSet()' for controlling
    the bcast filter bit independently from/after 'setup'.
